--- a/deployments/dynamodb/dynamoDbReceptacle.yaml
+++ b/deployments/dynamodb/dynamoDbReceptacle.yaml
@@ -7,37 +7,29 @@ Resources:
   ReceptacleDB:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: SayGreen
+      TableName: say-green
       TimeToLiveSpecification:
         AttributeName: ttl
         Enabled: true
       AttributeDefinitions:
         - AttributeName: hash
+          AttributeType: N
+        - AttributeName: range
           AttributeType: S
-        - AttributeName: sort
-          AttributeType: S
-        - AttributeName: type
-          AttributeType: S
+        - AttributeName: geohash
+          AttributeType: N
       KeySchema:
         - AttributeName: hash
           KeyType: HASH
-        - AttributeName: sort
+        - AttributeName: range
           KeyType: RANGE
       BillingMode: PAY_PER_REQUEST
-      GlobalSecondaryIndexes:
-        - IndexName: typeHash
+      LocalSecondaryIndexes:
+        - IndexName: hash-geohash
           KeySchema:
-            - AttributeName: type
-              KeyType: HASH
             - AttributeName: hash
-              KeyType: RANGE
-          Projection:
-            ProjectionType: ALL
-        - IndexName: typeSort
-          KeySchema:
-            - AttributeName: type
               KeyType: HASH
-            - AttributeName: sort
+            - AttributeName: geohash
               KeyType: RANGE
           Projection:
             ProjectionType: ALL
