--- a/web/package.json
+++ b/web/package.json
@@ -62,7 +62,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.51.5",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.19",
@@ -76,11 +76,13 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.1",
+    "@eslint/js": "^9.4.0",
     "@faker-js/faker": "^8.4.1",
     "@parcel/reporter-bundle-analyzer": "^2.12.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.6",
     "@types/mapbox-gl": "^2.7.17",
@@ -91,7 +93,7 @@
     "@typescript-eslint/parser": "^6.18.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "events": "^3.3.0",
     "jest": "^29.7.0",
@@ -107,6 +109,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.12.0"
   }
 }
